// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel should render component with \`hidden\` prop 1`] = `
<div
  className="root"
  hidden={true}
>
  <div
    className="header"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Header",
      }
    }
  />
  <div
    className="body"
  />
  <div
    className="footer"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Footer",
      }
    }
  />
</div>
`;

exports[`Panel should render component with \`noRefinementRoot\` CSS class 1`] = `
<div
  className="root noRefinementRoot"
  hidden={false}
>
  <div
    className="header"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Header",
      }
    }
  />
  <div
    className="body"
  />
  <div
    className="footer"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Footer",
      }
    }
  />
</div>
`;

exports[`Panel should render component with default props 1`] = `
<div
  className="root"
  hidden={false}
>
  <div
    className="header"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Header",
      }
    }
  />
  <div
    className="body"
  />
  <div
    className="footer"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Footer",
      }
    }
  />
</div>
`;
